wx-base/include/generated.h

// CLASS: wxLog
void wxLog_delete(wxLog *self);
void wxLog_AddTraceMask(const wxString * mask);
void wxLog_ClearTraceMasks();
wxArrayString *wxLog_GetTraceMasks();
bool wxLog_IsAllowedTraceMask(const wxString * mask);
void wxLog_RemoveTraceMask(const wxString * mask);
void wxLog_DontCreateOnDemand();
wxLog * wxLog_GetActiveTarget();
wxLog * wxLog_SetActiveTarget(wxLog * logtarget);
wxLog * wxLog_SetThreadActiveTarget(wxLog * logger);
void wxLog_FlushActive();
void wxLog_Resume();
void wxLog_Suspend();
bool wxLog_EnableLogging(bool enable);
bool wxLog_IsEnabled();
bool wxLog_GetRepetitionCounting();
void wxLog_SetRepetitionCounting(bool repet_counting);
wxString *wxLog_GetTimestamp();
void wxLog_SetTimestamp(const wxString * format);
void wxLog_DisableTimestamp();
bool wxLog_GetVerbose();
void wxLog_SetVerbose(bool verbose);
wxLogFormatter * wxLog_SetFormatter(wxLog * self, wxLogFormatter * formatter);
void wxLog_Flush(wxLog * self);
// CLASS: wxLogBuffer
void wxLogBuffer_delete(wxLogBuffer *self);
wxLogBuffer *wxLogBuffer_new();
wxString *wxLogBuffer_GetBuffer(const wxLogBuffer * self);
// CLASS: wxLogChain
void wxLogChain_delete(wxLogChain *self);
wxLogChain *wxLogChain_new(wxLog * logger);
void wxLogChain_DetachOldLog(wxLogChain * self);
wxLog * wxLogChain_GetOldLog(const wxLogChain * self);
bool wxLogChain_IsPassingMessages(const wxLogChain * self);
void wxLogChain_PassMessages(wxLogChain * self, bool pass_messages);
void wxLogChain_SetLog(wxLogChain * self, wxLog * logger);
// CLASS: wxLogFormatter
void wxLogFormatter_delete(wxLogFormatter *self);
wxLogFormatter *wxLogFormatter_new();
// CLASS: wxLogInterposer
void wxLogInterposer_delete(wxLogInterposer *self);
wxLogInterposer *wxLogInterposer_new();
// CLASS: wxLogInterposerTemp
void wxLogInterposerTemp_delete(wxLogInterposerTemp *self);
wxLogInterposerTemp *wxLogInterposerTemp_new();
// CLASS: wxLogNull
void wxLogNull_delete(wxLogNull *self);
wxLogNull *wxLogNull_new();
// CLASS: wxLogStderr
void wxLogStderr_delete(wxLogStderr *self);
wxLogStderr *wxLogStderr_new(FILE * fp, const wxMBConv * conv);
// CLASS: wxLogStream
void wxLogStream_delete(wxLogStream *self);
wxLogStream *wxLogStream_new(std::ostream * ostr, const wxMBConv * conv);
// CLASS: wxMemoryBuffer
void wxMemoryBuffer_delete(wxMemoryBuffer *self);
wxMemoryBuffer *wxMemoryBuffer_new(const wxMemoryBuffer * src);
wxMemoryBuffer *wxMemoryBuffer_new1(size_t size);
void wxMemoryBuffer_AppendData(wxMemoryBuffer * self, const void * data, size_t len);
void wxMemoryBuffer_Clear(wxMemoryBuffer * self);
void * wxMemoryBuffer_GetAppendBuf(wxMemoryBuffer * self, size_t size_needed);
size_t wxMemoryBuffer_GetBufSize(const wxMemoryBuffer * self);
void * wxMemoryBuffer_GetData(const wxMemoryBuffer * self);
size_t wxMemoryBuffer_GetDataLen(const wxMemoryBuffer * self);
void * wxMemoryBuffer_GetWriteBuf(wxMemoryBuffer * self, size_t size_needed);
bool wxMemoryBuffer_IsEmpty(const wxMemoryBuffer * self);
void wxMemoryBuffer_SetBufSize(wxMemoryBuffer * self, size_t size);
void wxMemoryBuffer_SetDataLen(wxMemoryBuffer * self, size_t size);
void wxMemoryBuffer_UngetAppendBuf(wxMemoryBuffer * self, size_t size_used);
void wxMemoryBuffer_UngetWriteBuf(wxMemoryBuffer * self, size_t size_used);
// CLASS: wxMessageOutput
void wxMessageOutput_delete(wxMessageOutput *self);
wxMessageOutput * wxMessageOutput_Get();
wxMessageOutput * wxMessageOutput_Set(wxMessageOutput * msgout);
void wxMessageOutput_Output(wxMessageOutput * self, const wxString * str);
// CLASS: wxMessageOutputBest
void wxMessageOutputBest_delete(wxMessageOutputBest *self);
// CLASS: wxMessageOutputDebug
void wxMessageOutputDebug_delete(wxMessageOutputDebug *self);
wxMessageOutputDebug *wxMessageOutputDebug_new();
// CLASS: wxMessageOutputStderr
void wxMessageOutputStderr_delete(wxMessageOutputStderr *self);
wxMessageOutputStderr *wxMessageOutputStderr_new(FILE * fp);
// CLASS: wxMimeTypesManager
void wxMimeTypesManager_delete(wxMimeTypesManager *self);
wxMimeTypesManager *wxMimeTypesManager_new();
void wxMimeTypesManager_AddFallbacks(wxMimeTypesManager * self, const wxFileTypeInfo * fallbacks);
wxFileType * wxMimeTypesManager_GetFileTypeFromExtension(wxMimeTypesManager * self, const wxString * extension);
wxFileType * wxMimeTypesManager_GetFileTypeFromMimeType(wxMimeTypesManager * self, const wxString * mime_type);
wxFileType * wxMimeTypesManager_Associate(wxMimeTypesManager * self, const wxFileTypeInfo * ft_info);
bool wxMimeTypesManager_Unassociate(wxMimeTypesManager * self, wxFileType * ft);
size_t wxMimeTypesManager_EnumAllFileTypes(wxMimeTypesManager * self, wxArrayString * mimetypes);
bool wxMimeTypesManager_IsOfType(const wxString * mime_type, const wxString * wildcard);
// CLASS: wxMutex
void wxMutex_delete(wxMutex *self);
// CLASS: wxMutexLocker
void wxMutexLocker_delete(wxMutexLocker *self);
wxMutexLocker *wxMutexLocker_new(wxMutex * mutex);
bool wxMutexLocker_IsOk(const wxMutexLocker * self);
// CLASS: wxObject
wxClassInfo *wxObject_CLASSINFO();
wxObject *wxObject_new();
wxObject *wxObject_new1(const wxObject * other);
wxClassInfo * wxObject_GetClassInfo(const wxObject * self);
wxObjectRefData * wxObject_GetRefData(const wxObject * self);
bool wxObject_IsKindOf(const wxObject * self, const wxClassInfo * info);
bool wxObject_IsSameAs(const wxObject * self, const wxObject * obj);
void wxObject_Ref(wxObject * self, const wxObject * clone);
void wxObject_SetRefData(wxObject * self, wxObjectRefData * data);
void wxObject_UnRef(wxObject * self);
void wxObject_UnShare(wxObject * self);