wx-base/src/generated/ffi.rs


    // wxLog
    pub fn wxLog_delete(self_: *mut c_void);
    pub fn wxLog_AddTraceMask(mask: *const c_void);
    pub fn wxLog_ClearTraceMasks();
    pub fn wxLog_GetTraceMasks() -> *mut c_void;
    pub fn wxLog_IsAllowedTraceMask(mask: *const c_void) -> bool;
    pub fn wxLog_RemoveTraceMask(mask: *const c_void);
    pub fn wxLog_DontCreateOnDemand();
    pub fn wxLog_GetActiveTarget() -> *mut c_void;
    pub fn wxLog_SetActiveTarget(logtarget: *mut c_void) -> *mut c_void;
    pub fn wxLog_SetThreadActiveTarget(logger: *mut c_void) -> *mut c_void;
    pub fn wxLog_FlushActive();
    pub fn wxLog_Resume();
    pub fn wxLog_Suspend();
    // NOT_SUPPORTED: pub fn wxLog_GetLogLevel() -> wxLogLevel;
    // NOT_SUPPORTED: pub fn wxLog_IsLevelEnabled(level: wxLogLevel, component: wxString) -> bool;
    // NOT_SUPPORTED: pub fn wxLog_SetComponentLevel(component: *const c_void, level: wxLogLevel);
    // NOT_SUPPORTED: pub fn wxLog_SetLogLevel(log_level: wxLogLevel);
    pub fn wxLog_EnableLogging(enable: bool) -> bool;
    pub fn wxLog_IsEnabled() -> bool;
    pub fn wxLog_GetRepetitionCounting() -> bool;
    pub fn wxLog_SetRepetitionCounting(repet_counting: bool);
    pub fn wxLog_GetTimestamp() -> *mut c_void;
    pub fn wxLog_SetTimestamp(format: *const c_void);
    pub fn wxLog_DisableTimestamp();
    pub fn wxLog_GetVerbose() -> bool;
    pub fn wxLog_SetVerbose(verbose: bool);
    pub fn wxLog_SetFormatter(self_: *mut c_void, formatter: *mut c_void) -> *mut c_void;
    pub fn wxLog_Flush(self_: *mut c_void);
    // NOT_SUPPORTED: pub fn wxLog_LogRecord(self_: *mut c_void, level: wxLogLevel, msg: *const c_void, info: *const c_void);

    // wxLogBuffer
    pub fn wxLogBuffer_delete(self_: *mut c_void);
    pub fn wxLogBuffer_new() -> *mut c_void;
    pub fn wxLogBuffer_GetBuffer(self_: *const c_void) -> *mut c_void;

    // wxLogChain
    pub fn wxLogChain_delete(self_: *mut c_void);
    pub fn wxLogChain_new(logger: *mut c_void) -> *mut c_void;
    // DTOR: pub fn wxLogChain_~wxLogChain(self_: *mut c_void);
    pub fn wxLogChain_DetachOldLog(self_: *mut c_void);
    pub fn wxLogChain_GetOldLog(self_: *const c_void) -> *mut c_void;
    pub fn wxLogChain_IsPassingMessages(self_: *const c_void) -> bool;
    pub fn wxLogChain_PassMessages(self_: *mut c_void, pass_messages: bool);
    pub fn wxLogChain_SetLog(self_: *mut c_void, logger: *mut c_void);

    // wxLogFormatter
    pub fn wxLogFormatter_delete(self_: *mut c_void);
    pub fn wxLogFormatter_new() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxLogFormatter_Format(self_: *const c_void, level: wxLogLevel, msg: *const c_void, info: *const c_void) -> *mut c_void;

    // wxLogInterposer
    pub fn wxLogInterposer_delete(self_: *mut c_void);
    pub fn wxLogInterposer_new() -> *mut c_void;

    // wxLogInterposerTemp
    pub fn wxLogInterposerTemp_delete(self_: *mut c_void);
    pub fn wxLogInterposerTemp_new() -> *mut c_void;

    // wxLogNull
    pub fn wxLogNull_delete(self_: *mut c_void);
    pub fn wxLogNull_new() -> *mut c_void;
    // DTOR: pub fn wxLogNull_~wxLogNull(self_: *mut c_void);

    // wxLogStderr
    pub fn wxLogStderr_delete(self_: *mut c_void);
    pub fn wxLogStderr_new(fp: *mut c_void, conv: *const c_void) -> *mut c_void;

    // wxLogStream
    pub fn wxLogStream_delete(self_: *mut c_void);
    pub fn wxLogStream_new(ostr: *mut c_void, conv: *const c_void) -> *mut c_void;

    // wxMemoryBuffer
    pub fn wxMemoryBuffer_delete(self_: *mut c_void);
    pub fn wxMemoryBuffer_new(src: *const c_void) -> *mut c_void;
    pub fn wxMemoryBuffer_new1(size: usize) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxMemoryBuffer_AppendByte(self_: *mut c_void, data: char);
    pub fn wxMemoryBuffer_AppendData(self_: *mut c_void, data: *const c_void, len: usize);
    pub fn wxMemoryBuffer_Clear(self_: *mut c_void);
    pub fn wxMemoryBuffer_GetAppendBuf(self_: *mut c_void, size_needed: usize) -> *mut c_void;
    pub fn wxMemoryBuffer_GetBufSize(self_: *const c_void) -> usize;
    pub fn wxMemoryBuffer_GetData(self_: *const c_void) -> *mut c_void;
    pub fn wxMemoryBuffer_GetDataLen(self_: *const c_void) -> usize;
    pub fn wxMemoryBuffer_GetWriteBuf(self_: *mut c_void, size_needed: usize) -> *mut c_void;
    pub fn wxMemoryBuffer_IsEmpty(self_: *const c_void) -> bool;
    pub fn wxMemoryBuffer_SetBufSize(self_: *mut c_void, size: usize);
    pub fn wxMemoryBuffer_SetDataLen(self_: *mut c_void, size: usize);
    pub fn wxMemoryBuffer_UngetAppendBuf(self_: *mut c_void, size_used: usize);
    pub fn wxMemoryBuffer_UngetWriteBuf(self_: *mut c_void, size_used: usize);

    // wxMessageOutput
    pub fn wxMessageOutput_delete(self_: *mut c_void);
    pub fn wxMessageOutput_Get() -> *mut c_void;
    pub fn wxMessageOutput_Set(msgout: *mut c_void) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxMessageOutput_Printf(self_: *mut c_void, format: *const c_void, None: ...);
    pub fn wxMessageOutput_Output(self_: *mut c_void, str: *const c_void);

    // wxMessageOutputBest
    pub fn wxMessageOutputBest_delete(self_: *mut c_void);
    // NOT_SUPPORTED: pub fn wxMessageOutputBest_new(flags: wxMessageOutputFlags) -> *mut c_void;

    // wxMessageOutputDebug
    pub fn wxMessageOutputDebug_delete(self_: *mut c_void);
    pub fn wxMessageOutputDebug_new() -> *mut c_void;

    // wxMessageOutputStderr
    pub fn wxMessageOutputStderr_delete(self_: *mut c_void);
    pub fn wxMessageOutputStderr_new(fp: *mut c_void) -> *mut c_void;

    // wxMimeTypesManager
    pub fn wxMimeTypesManager_delete(self_: *mut c_void);
    pub fn wxMimeTypesManager_new() -> *mut c_void;
    // DTOR: pub fn wxMimeTypesManager_~wxMimeTypesManager(self_: *mut c_void);
    pub fn wxMimeTypesManager_AddFallbacks(self_: *mut c_void, fallbacks: *const c_void);
    pub fn wxMimeTypesManager_GetFileTypeFromExtension(
        self_: *mut c_void,
        extension: *const c_void,
    ) -> *mut c_void;
    pub fn wxMimeTypesManager_GetFileTypeFromMimeType(
        self_: *mut c_void,
        mime_type: *const c_void,
    ) -> *mut c_void;
    pub fn wxMimeTypesManager_Associate(self_: *mut c_void, ft_info: *const c_void) -> *mut c_void;
    pub fn wxMimeTypesManager_Unassociate(self_: *mut c_void, ft: *mut c_void) -> bool;
    pub fn wxMimeTypesManager_EnumAllFileTypes(self_: *mut c_void, mimetypes: *mut c_void)
        -> usize;
    pub fn wxMimeTypesManager_IsOfType(mime_type: *const c_void, wildcard: *const c_void) -> bool;

    // wxMutex
    pub fn wxMutex_delete(self_: *mut c_void);
    // NOT_SUPPORTED: pub fn wxMutex_new(type_: wxMutexType) -> *mut c_void;
    // DTOR: pub fn wxMutex_~wxMutex(self_: *mut c_void);
    // NOT_SUPPORTED: pub fn wxMutex_Lock(self_: *mut c_void) -> wxMutexError;
    // NOT_SUPPORTED: pub fn wxMutex_LockTimeout(self_: *mut c_void, msec: unsigned long) -> wxMutexError;
    // NOT_SUPPORTED: pub fn wxMutex_TryLock(self_: *mut c_void) -> wxMutexError;
    // NOT_SUPPORTED: pub fn wxMutex_Unlock(self_: *mut c_void) -> wxMutexError;

    // wxMutexLocker
    pub fn wxMutexLocker_delete(self_: *mut c_void);
    pub fn wxMutexLocker_new(mutex: *mut c_void) -> *mut c_void;
    // DTOR: pub fn wxMutexLocker_~wxMutexLocker(self_: *mut c_void);
    pub fn wxMutexLocker_IsOk(self_: *const c_void) -> bool;

    // wxObject
    pub fn wxObject_CLASSINFO() -> *mut c_void;
    pub fn wxObject_new() -> *mut c_void;
    pub fn wxObject_new1(other: *const c_void) -> *mut c_void;
    // DTOR: pub fn wxObject_~wxObject(self_: *mut c_void);
    pub fn wxObject_GetClassInfo(self_: *const c_void) -> *mut c_void;
    pub fn wxObject_GetRefData(self_: *const c_void) -> *mut c_void;
    pub fn wxObject_IsKindOf(self_: *const c_void, info: *const c_void) -> bool;
    pub fn wxObject_IsSameAs(self_: *const c_void, obj: *const c_void) -> bool;
    pub fn wxObject_Ref(self_: *mut c_void, clone: *const c_void);
    pub fn wxObject_SetRefData(self_: *mut c_void, data: *mut c_void);
    pub fn wxObject_UnRef(self_: *mut c_void);
    pub fn wxObject_UnShare(self_: *mut c_void);
    // BLOCKED: pub fn wxObject_operator delete(self_: *mut c_void, buf: *mut c_void);
    // BLOCKED: pub fn wxObject_operator new(self_: *mut c_void, size: usize, filename: *const c_void, line_num: c_int) -> *mut c_void;
